alignment and size fix

--- a/scss/core/abstracts/_variables.scss
+++ b/scss/core/abstracts/_variables.scss
@@ -299,6 +299,8 @@ $table-row-color: $skyblue-200 !default;
 $table-thead-bg-color: $blue-100 !default;
 $table-body-color: $gray-800 !default;
 
+$table-avatar-label-color: $blue-500 !default;
+
 // nested table
 $nested-table-shadow:inset 0 2px 6px 0 rgba(56,56,66,.1);
 $nested-table-background: $skyblue-200 !default;
